# dFC

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  README.rst  agents.md  dFC_methods_demo.ipynb  demo.ipynb  demo_code.ipynb  multi_analysis_demo.ipynb  pyproject.toml  setup.py  tox.ini
.github/: copilot-instructions.md
.github/prompts/: 01_install.prompt.md  02_state_free_quickstart.prompt.md  03_state_based_quickstart.prompt.md  04_choose_method.prompt.md  05_troubleshoot.prompt.md
.github/workflows/: run_precommit.yml  test.yml  update_precommit_hooks.yml  validate_cff.yml
BIC_codes/: FCS_estimate.py  dFC_assessment.py  dFC_funcs.py  main.py  post_analysis.py  similarity_measurement.py  test_dFC.py  visualization.py
BIC_codes/functions/: dFC_funcs.py  post_analysis_funcs.py
HCP_resting_state_analysis/: FCS_estimate.py  dFC_assessment.py  main.py  post_analysis.py  similarity_measurement.py  test_dFC.py  visualization.py
HCP_resting_state_analysis/functions/: dFC_funcs.py  post_analysis_funcs.py
docs/: SKILL.md
examples/: dFC_methods_demo.py  multi_analysis_demo.ipynb  multi_analysis_demo.py
multi_analysis_dfc/: __init__.py  data_loader.py  dfc.py  dfc_utils.py  multi_analysis.py  task_utils.py  time_series.py
multi_analysis_dfc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
multi_analysis_dfc/comparison/: __init__.py  similarity_assessment.py
multi_analysis_dfc/dfc_methods/: base_dfc_method.py  continuous_hmm.py  discrete_hmm.py  sliding_window.py  sliding_window_clustr.py  time_freq.py  windowless.py
pydfc/: __init__.py  data_loader.py  dfc.py  dfc_utils.py  multi_analysis.py  multi_analysis_utils.py  task_utils.py  time_series.py
pydfc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pydfc/comparison/: __init__.py  analytical.py  plotting.py  similarity_assessment.py
pydfc/dfc_methods/: __init__.py  base_dfc_method.py  cap.py  continuous_hmm.py  discrete_hmm.py  sliding_window.py  sliding_window_clustr.py  time_freq.py  windowless.py
rest_dFC/: visualization.py
rest_dFC/functions/: post_analysis_funcs.py
sampleDATA/: Gordon333_LOCS.mat  bold_time.npy  center_locs.npy
sample_data/sample_array_data/: region_labels.npy
sample_data/sample_array_data/100206_Rest1_LR/: ROI_data_Gordon_333_surf.mat
sample_data/sample_array_data/100307_Rest1_LR/: ROI_data_Gordon_333_surf.mat
sample_data/sample_nifti_data/: sub-0001_task-restingstate_acq-mb3_desc-confounds_regressors.tsv
task_dFC/: FCS_estimate.py  dFC_assessment.py  nifti_to_roi_signal.py  validation.py
tests/: test_data_loader.py  test_dfc.py  test_time_series.py
